net/sdk/network/Azure.ResourceManager.Network/tests/SessionRecords/RouteTableTests/SubnetRouteTableTest[2018-11-01]Async.json
{
  "Entries": [
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c?api-version=**",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-3df4dd7adcc85622e37cb55a535a0ec8-f2bde01f993faf63-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "247f6a2b46a348efd9793dacfb80ea03",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "748",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:29 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "5d90cdff-ac3c-4d47-9957-3a1c7013c20d",
        "x-ms-ratelimit-remaining-subscription-reads": "11712",
        "x-ms-request-id": "5d90cdff-ac3c-4d47-9957-3a1c7013c20d",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155230Z:5d90cdff-ac3c-4d47-9957-3a1c7013c20d"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "authorizationSource": "RoleBased",
        "managedByTenants": [],
        "tags": {
          "TagKey-9823": "TagValue-1254",
          "TagKey-3481": "TagValue-320",
          "TagKey-4926": "TagValue-1187",
          "TagKey-751": "TagValue-3921",
          "TagKey-1866": "TagValue-8559",
          "TagKey-3094": "TagValue-9190",
          "TagKey-2449": "TagValue-9",
          "TagKey-8379": "TagValue-164",
          "TagKey-7470": "TagValue-2205",
          "TagKey-4236": "TagValue-3698",
          "TagKey-5316": "TagValue-2725"
        },
        "subscriptionId": "db1ab6f0-4769-4b27-930e-01e2ef9c123c",
        "tenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
        "displayName": ".NET Mgmt SDK Test with TTL = 1 Day",
        "state": "Enabled",
        "subscriptionPolicies": {
          "locationPlacementId": "Internal_2014-09-01",
          "quotaId": "Internal_2014-09-01",
          "spendingLimit": "Off"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourcegroups/csmrg6330?api-version=**",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "21",
        "Content-Type": "application/json",
        "traceparent": "00-e2013bf74de021319b80bbcf621daf50-bfeec0a68cac9b2f-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4445bb83510c3831be862b446c36f5dc",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "215",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:30 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-correlation-request-id": "7439e141-3e9d-4c1b-b535-38681df018d9",
        "x-ms-ratelimit-remaining-subscription-writes": "1127",
        "x-ms-request-id": "7439e141-3e9d-4c1b-b535-38681df018d9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155230Z:7439e141-3e9d-4c1b-b535-38681df018d9"
      },
      "ResponseBody": {
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330",
        "name": "csmrg6330",
        "type": "Microsoft.Resources/resourceGroups",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded"
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516?api-version=2018-11-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "183",
        "Content-Type": "application/json",
        "traceparent": "00-be8d18f4e1c0a4a225d9d924d90f4fa2-a834ec83a074b112-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "191915f27812a8f4f0d8284e2539f049",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "routes": [
            {
              "properties": {
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/7d4a348d-f4d5-4388-a09f-570dadaa38a0?api-version=2018-11-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1038",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:33 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "2",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "a79792aa-0696-4b33-9022-5f03bd9a4865",
        "x-ms-client-request-id": "191915f27812a8f4f0d8284e2539f049",
        "x-ms-correlation-request-id": "b91ef272-87a6-4b1d-a8b3-c1a17cb8e78b",
        "x-ms-ratelimit-remaining-subscription-writes": "1126",
        "x-ms-request-id": "7d4a348d-f4d5-4388-a09f-570dadaa38a0",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155233Z:b91ef272-87a6-4b1d-a8b3-c1a17cb8e78b"
      },
      "ResponseBody": {
        "name": "azsmnet8516",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516",
        "etag": "W/\"6a18d17b-ea9d-449e-94c3-26e837ed20b1\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "795ba8f9-25f0-4ec2-b506-1f5a40556ed6",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet4822",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516/routes/azsmnet4822",
              "etag": "W/\"6a18d17b-ea9d-449e-94c3-26e837ed20b1\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/7d4a348d-f4d5-4388-a09f-570dadaa38a0?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-be8d18f4e1c0a4a225d9d924d90f4fa2-8f5a260ef3c5bf49-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "eef82df96acdcca94f636158106f60f2",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "29",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:33 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "4143701a-c220-455c-8ec2-769fd2dfc3f4",
        "x-ms-client-request-id": "eef82df96acdcca94f636158106f60f2",
        "x-ms-correlation-request-id": "d9b1048f-73ec-4dec-b138-a205af4772b4",
        "x-ms-ratelimit-remaining-subscription-reads": "11711",
        "x-ms-request-id": "34f2ab01-c54f-4be1-8eb0-f24d47b16614",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155233Z:d9b1048f-73ec-4dec-b138-a205af4772b4"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-be8d18f4e1c0a4a225d9d924d90f4fa2-885c7b389bf01c36-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "16d122538303d934c72d3452b5f13bad",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1040",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:33 GMT",
        "ETag": "W/\"1c96ebf8-756c-4d0b-8ca8-6ce392bb7dcb\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d325796d-22a5-492e-b55c-b76977aa8cd0",
        "x-ms-client-request-id": "16d122538303d934c72d3452b5f13bad",
        "x-ms-correlation-request-id": "7ffe6d79-cdb1-4884-94f1-710b4804fe08",
        "x-ms-ratelimit-remaining-subscription-reads": "11710",
        "x-ms-request-id": "a272cbdd-573d-4883-8d8a-d15a00ce3343",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155234Z:7ffe6d79-cdb1-4884-94f1-710b4804fe08"
      },
      "ResponseBody": {
        "name": "azsmnet8516",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516",
        "etag": "W/\"1c96ebf8-756c-4d0b-8ca8-6ce392bb7dcb\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "795ba8f9-25f0-4ec2-b506-1f5a40556ed6",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet4822",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516/routes/azsmnet4822",
              "etag": "W/\"1c96ebf8-756c-4d0b-8ca8-6ce392bb7dcb\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-0e786bd67b31318b30535f40f796a791-7608f68a29fbb3ab-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f85457910241fa7b350b2fbbb7f5dc75",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1040",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:34 GMT",
        "ETag": "W/\"1c96ebf8-756c-4d0b-8ca8-6ce392bb7dcb\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "cf88b317-02d2-4b27-a46f-6841ee404f96",
        "x-ms-client-request-id": "f85457910241fa7b350b2fbbb7f5dc75",
        "x-ms-correlation-request-id": "0b95ac43-66a5-4df4-8349-bf47d60be4ea",
        "x-ms-ratelimit-remaining-subscription-reads": "11709",
        "x-ms-request-id": "e773efde-31f8-460e-8db6-f7920cc85685",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155234Z:0b95ac43-66a5-4df4-8349-bf47d60be4ea"
      },
      "ResponseBody": {
        "name": "azsmnet8516",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516",
        "etag": "W/\"1c96ebf8-756c-4d0b-8ca8-6ce392bb7dcb\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "795ba8f9-25f0-4ec2-b506-1f5a40556ed6",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet4822",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516/routes/azsmnet4822",
              "etag": "W/\"1c96ebf8-756c-4d0b-8ca8-6ce392bb7dcb\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ]
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/virtualNetworks/azsmnet1577?api-version=2025-07-01",
      "RequestMethod": "PUT",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "Content-Length": "387",
        "Content-Type": "application/json",
        "traceparent": "00-f6196920ac0084319d11b8e6f86f5817-7914bac329dc0316-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "31704aaf76cc1ef826a03657175d28b3",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": {
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "properties": {
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516"
                }
              }
            }
          ]
        },
        "location": "westus"
      },
      "StatusCode": 201,
      "ResponseHeaders": {
        "azure-asyncnotification": "Enabled",
        "azure-asyncoperation": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/f81bcbbc-0284-4f39-b666-f84df39fe5b2?api-version=2025-07-01",
        "Cache-Control": "no-cache",
        "Content-Length": "1170",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:36 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "3",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "d7fb1306-6b3d-424d-ae0d-cb62bdebd0a1",
        "x-ms-client-request-id": "31704aaf76cc1ef826a03657175d28b3",
        "x-ms-correlation-request-id": "16910e18-6d0f-4ff6-ae2d-74fd452f3ac5",
        "x-ms-ratelimit-remaining-subscription-writes": "1125",
        "x-ms-request-id": "f81bcbbc-0284-4f39-b666-f84df39fe5b2",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155237Z:16910e18-6d0f-4ff6-ae2d-74fd452f3ac5"
      },
      "ResponseBody": {
        "name": "azsmnet1577",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/virtualNetworks/azsmnet1577",
        "etag": "W/\"3ffc8202-3991-4fc3-b32c-3b774ecc7b6a\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Updating",
          "resourceGuid": "bb75dc8a-d712-44df-a49e-f5da02ab7915",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet8368",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/virtualNetworks/azsmnet1577/subnets/azsmnet8368",
              "etag": "W/\"3ffc8202-3991-4fc3-b32c-3b774ecc7b6a\"",
              "properties": {
                "provisioningState": "Updating",
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/f81bcbbc-0284-4f39-b666-f84df39fe5b2?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-f6196920ac0084319d11b8e6f86f5817-7197e2db8028fb13-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "f141e4f3603cdd8bff22dbdbc4def4d1",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "23",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:36 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Retry-After": "10",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "c17dd4e9-0882-4c78-9aac-ddde07745cc7",
        "x-ms-client-request-id": "f141e4f3603cdd8bff22dbdbc4def4d1",
        "x-ms-correlation-request-id": "6884a9cf-837f-4e02-a1b3-979dafbc534b",
        "x-ms-ratelimit-remaining-subscription-reads": "11708",
        "x-ms-request-id": "bd34b8d0-4ed6-41cf-953a-55f91761e1a9",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155237Z:6884a9cf-837f-4e02-a1b3-979dafbc534b"
      },
      "ResponseBody": {
        "status": "InProgress"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/providers/Microsoft.Network/locations/westus/operations/f81bcbbc-0284-4f39-b666-f84df39fe5b2?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-f6196920ac0084319d11b8e6f86f5817-902b4800555413b3-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "232d0392f75b5e20a39950d4237ffc54",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "22",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:46 GMT",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "e97ca877-d9ee-4d74-99ad-6ec9bc07145a",
        "x-ms-client-request-id": "232d0392f75b5e20a39950d4237ffc54",
        "x-ms-correlation-request-id": "73733dea-e632-43ce-8295-3776783a8465",
        "x-ms-ratelimit-remaining-subscription-reads": "11707",
        "x-ms-request-id": "2734f43c-e307-4481-b3fd-4fb6e25b0d1a",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155247Z:73733dea-e632-43ce-8295-3776783a8465"
      },
      "ResponseBody": {
        "status": "Succeeded"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/virtualNetworks/azsmnet1577?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Authorization": "Sanitized",
        "traceparent": "00-f6196920ac0084319d11b8e6f86f5817-4c3d19e5ea5e0743-00",
        "User-Agent": "azsdk-net-ResourceManager/1.6.0 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "3363784e361c67762d3d688e76cb1202",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1172",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:47 GMT",
        "ETag": "W/\"eeea5c70-1545-4ade-b883-7b5045bd8ced\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "bd344944-d799-453e-8601-6a5e4ef5ff4f",
        "x-ms-client-request-id": "3363784e361c67762d3d688e76cb1202",
        "x-ms-correlation-request-id": "6f98a2e0-2943-4946-88c6-9f18eb53c9a0",
        "x-ms-ratelimit-remaining-subscription-reads": "11706",
        "x-ms-request-id": "952d66ae-0535-450d-99af-11db9cb71952",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155248Z:6f98a2e0-2943-4946-88c6-9f18eb53c9a0"
      },
      "ResponseBody": {
        "name": "azsmnet1577",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/virtualNetworks/azsmnet1577",
        "etag": "W/\"eeea5c70-1545-4ade-b883-7b5045bd8ced\"",
        "type": "Microsoft.Network/virtualNetworks",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "bb75dc8a-d712-44df-a49e-f5da02ab7915",
          "addressSpace": {
            "addressPrefixes": [
              "10.0.0.0/16"
            ]
          },
          "dhcpOptions": {
            "dnsServers": [
              "10.1.1.1",
              "10.1.2.4"
            ]
          },
          "subnets": [
            {
              "name": "azsmnet8368",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/virtualNetworks/azsmnet1577/subnets/azsmnet8368",
              "etag": "W/\"eeea5c70-1545-4ade-b883-7b5045bd8ced\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24",
                "routeTable": {
                  "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
              },
              "type": "Microsoft.Network/virtualNetworks/subnets"
            }
          ],
          "virtualNetworkPeerings": [],
          "enableDdosProtection": false
        }
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/virtualNetworks/azsmnet1577/subnets/azsmnet8368?api-version=2025-07-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-9d531d3ee2e39bb1756adebef4766e93-82decce3ce8822d6-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "1ee681042da4fc62c3e34ea310b6ba80",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "620",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:47 GMT",
        "ETag": "W/\"eeea5c70-1545-4ade-b883-7b5045bd8ced\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "7cae305f-b821-4c68-98fd-cf8962c046f7",
        "x-ms-client-request-id": "1ee681042da4fc62c3e34ea310b6ba80",
        "x-ms-correlation-request-id": "84f436e9-1d62-4505-83e3-c5a3fa703d84",
        "x-ms-ratelimit-remaining-subscription-reads": "11705",
        "x-ms-request-id": "1fa055d7-544e-40b9-8d14-dcc4ccf14a58",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155248Z:84f436e9-1d62-4505-83e3-c5a3fa703d84"
      },
      "ResponseBody": {
        "name": "azsmnet8368",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/virtualNetworks/azsmnet1577/subnets/azsmnet8368",
        "etag": "W/\"eeea5c70-1545-4ade-b883-7b5045bd8ced\"",
        "properties": {
          "provisioningState": "Succeeded",
          "addressPrefix": "10.0.0.0/24",
          "routeTable": {
            "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516"
          },
          "delegations": [],
          "privateEndpointNetworkPolicies": "Disabled",
          "privateLinkServiceNetworkPolicies": "Enabled"
        },
        "type": "Microsoft.Network/virtualNetworks/subnets"
      }
    },
    {
      "RequestUri": "https://management.azure.com/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516?api-version=2018-11-01",
      "RequestMethod": "GET",
      "RequestHeaders": {
        "Accept": "application/json",
        "Authorization": "Sanitized",
        "traceparent": "00-4ce2c1b34bffb5106c121b66364a6a33-5c6c11edfdc91e27-00",
        "User-Agent": "azsdk-net-ResourceManager.Network/1.3.0-alpha.20230627.1 (.NET 7.0.7; Microsoft Windows 10.0.22621)",
        "x-ms-client-request-id": "4c8c8626c07a5cb58dc6f61d8e92e8d7",
        "x-ms-return-client-request-id": "true"
      },
      "RequestBody": null,
      "StatusCode": 200,
      "ResponseHeaders": {
        "Cache-Control": "no-cache",
        "Content-Length": "1254",
        "Content-Type": "application/json; charset=utf-8",
        "Date": "Wed, 28 Jun 2023 15:52:48 GMT",
        "ETag": "W/\"e7f25521-5656-4b17-909a-d7b9ce23d952\"",
        "Expires": "-1",
        "Pragma": "no-cache",
        "Server": [
          "Microsoft-HTTPAPI/2.0",
          "Microsoft-HTTPAPI/2.0"
        ],
        "Strict-Transport-Security": "max-age=31536000; includeSubDomains",
        "X-Content-Type-Options": "nosniff",
        "x-ms-arm-service-request-id": "82e689c9-941b-4262-9374-33fb4da1d106",
        "x-ms-client-request-id": "4c8c8626c07a5cb58dc6f61d8e92e8d7",
        "x-ms-correlation-request-id": "6a240786-bae8-4783-bef7-c8934726ca95",
        "x-ms-ratelimit-remaining-subscription-reads": "11704",
        "x-ms-request-id": "d7a1c660-ca5f-4750-b861-7034bd75caf6",
        "x-ms-routing-request-id": "SOUTHEASTASIA:20230628T155249Z:6a240786-bae8-4783-bef7-c8934726ca95"
      },
      "ResponseBody": {
        "name": "azsmnet8516",
        "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516",
        "etag": "W/\"e7f25521-5656-4b17-909a-d7b9ce23d952\"",
        "type": "Microsoft.Network/routeTables",
        "location": "westus",
        "properties": {
          "provisioningState": "Succeeded",
          "resourceGuid": "795ba8f9-25f0-4ec2-b506-1f5a40556ed6",
          "disableBgpRoutePropagation": false,
          "routes": [
            {
              "name": "azsmnet4822",
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/routeTables/azsmnet8516/routes/azsmnet4822",
              "etag": "W/\"e7f25521-5656-4b17-909a-d7b9ce23d952\"",
              "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "192.168.1.0/24",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "23.108.1.1"
              },
              "type": "Microsoft.Network/routeTables/routes"
            }
          ],
          "subnets": [
            {
              "id": "/subscriptions/db1ab6f0-4769-4b27-930e-01e2ef9c123c/resourceGroups/csmrg6330/providers/Microsoft.Network/virtualNetworks/azsmnet1577/subnets/azsmnet8368"
            }
          ]
        }
      }
    }
  ],
  "Variables": {
    "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
    "LOCATION": "westus",
    "RandomSeed": "914650681",
    "RESOURCE_MANAGER_URL": null,
    "SUBSCRIPTION_ID": "db1ab6f0-4769-4b27-930e-01e2ef9c123c"
  }
}
